src/components/SmarterChat/styles.css
.SmarterChat {
  border: 1px solid rgba(255, 87, 51, 0.75);
  height: 100%;
  overflow-x: auto;
}

.SmarterChat a {
  text-decoration: inherit;
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

.app-title {
  text-align: center;
  background-color: rgba(255, 87, 51, 0.75);
  width: 100%;
  padding: 0;
  margin: 0;
  color: whitesmoke;
}

h5 {
  color: whitesmoke;
  margin-left: 10px;
  margin-bottom: 0;
}
.app-logo {
  width: 75px;
  margin: 0 auto;
  display: block;
}

.container {
  display: flex;
}

.chat-app {
  position: relative;
  height: 100%;
  width: 100%;
}

.cs-message-separator::before,
.cs-message-separator::after {
  background-color: lightgray !important;
}

.cs-conversation-header {
  text-align: center;
}

div.cs-message__html-content a {
  text-decoration: underline !important;
  filter: invert(1) contrast(2);
}
div.cs-message__html-content a:hover {
  text-decoration: underline;
  color: orange;
}

section.smarter-message .cs-message__html-content {
  color: brown !important;
  background-color: blanchedalmond;
  font-family: "Courier New", Courier, monospace;
  font-weight: bold;
  text-align: center;
}

section.smarter-message .cs-message__content {
  color: brown !important;
  background-color: blanchedalmond;
  border: 1px solid brown;
  margin-top: 10px;
  margin-bottom: 10px;
  border-radius: 10px;
}

section.system-message .cs-message__html-content {
  color: beige !important;
  background-color: rgb(39, 40, 34);
  font-family: "Courier New", Courier, monospace;
  font-weight: bold;
}

section.system-message .cs-message__content {
  color: beige !important;
  background-color: rgb(39, 40, 34);
  border: 1px solid brown;
  margin-top: 10px;
  margin-bottom: 10px;
  border-radius: 10px;
}

/*-------------- Responsive Styling -----------------------

xs = Extra small <576px. Max container width None (auto)
sm = Small ≥576px. Max container width 540px.
md = Medium ≥768px. Max container width 720px.
lg = Large ≥992px. Max container width 960px.
xl = Extra large ≥1200px. Max container width 1140px.

*/

/********** Extra large devices only **********/
@media (min-width: 1200px) {
}

/********** Large devices only **********/
@media (min-width: 992px) and (max-width: 1199px) {
}

/********** Medium devices only **********/
@media (min-width: 768px) and (max-width: 991px) {
}

/********** Small devices only **********/
@media (min-width: 576) and (max-width: 767px) {
}

/********** Extra small devices only **********/
@media (min-width: 480px) and (max-width: 575px) {
}
/********** Super extra small devices Only :-) (e.g., iPhone 4) **********/
@media (max-width: 479px) {
}

/*  ------------ MCDANIEL ------------------ */
@media (max-width: 991px) {
  .hide-medium {
    display: none;
    width: 0 !important;
    height: 0 !important;
  }
}

@media (max-width: 767px) {
  .hide-small {
    display: none;
    width: 0 !important;
    height: 0 !important;
  }
}

